lab10
Co-Authored-By: Otgonbayar.A <6377+gobi@users.noreply.github.com>